kubernetes/apps/kube-system/cilium/resources/gateway.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: Gateway
metadata:
  name: internal
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "10.0.0.180"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${PRIVATE_DOMAIN/./-}-production-tls
---
# TODO
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
